--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
            
           <div class="container"  >
             <div class="carousel-caption text-start">
-              <h1>LAMBORGHINI By เฮียเอ็ม</h1>
+              <h1>LAMBORGHINI LOPBURI</h1>
               <p class="opacity-75">The Revuelto is the beginning of a new era for Lamborghini, who has harnessed the power of hybridization technology to create the first HPEV (High Performance Electrified Vehicle).</p>              
             </div>
           </div>
